fix: color contrast; suggestions list width

--- a/src/components/outline-yext-universal/outline-yext-universal.css
+++ b/src/components/outline-yext-universal/outline-yext-universal.css
@@ -123,6 +123,7 @@ main {
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
   font-family: var(--ff-body);
   text-align: left;
+  width: 600px;
 
   &.is-hidden {
     display: none;
@@ -135,7 +136,8 @@ main {
   li:hover {
     background-color: var(--c-neutral-gray-300);
     button {
-      color: var(--c-brand-blue, #2f83b3);
+      text-decoration: underline;
+      /* color: var(--c-brand-blue, #2f83b3); */
     }
   }
 
